# tp2

./: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h  README.txt  RayTracer.cpp  RayTracer.h  SceneWriter.cpp  SceneWriter.h  Writer.h
assets/scenes/: Bolo.scn  Sistema Solar.scn
reader/: ErrorHandler.h  ReaderBase.cpp  ReaderBase.h  SceneReader.cpp  SceneReader.h
